[package]
name = "awaken"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.11.0"
async-std = "1.13.1"
chrono = "0.4.41"
ical = "0.11.0"
icalendar = "0.17.1"
mail-builder = "0.4.3"
mail-send = "0.5.1"
minicaldav = "0.8.0"
reqwest = { version = "0.12.22", features = ["blocking"] }
rodio = "0.21.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
shellexpand = "3.1.1"
tokio = "1.47.1"
toml-configurator = "0.1.0"
ureq = "2.12.1"
url = "2.5.4"
uuid = "1.17.0"
